--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-dark fixed-top">
         <div class="container flex-lg-column">
-          <a class="navbar-brand mb-lg" href="#">
+          <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
             <span class="h3 fw-bold d-block d-lg-none">Tayal Amber</span>
-           <img src="./assets/images/Person.jpg.jpeg" class="d-none d-lg-block" alt="">  
+           <img src="./assets/images/Person.jpg.jpeg" class="d-none d-lg-block rounded-circle" alt="">  
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,41 @@
         </div>
       </nav>
       <!-- //NavBar -->
+
+      <!-- Content Wrapper -->
+
+      <div id="content-wrapper">
+   <!-- Home Section -->
+
+<section id="home" class="full-height px-lg-5">
+  <div class="container">
+<div class="row">
+  <div class="col-log-8">
+        <h1 class="display-4 fw-bold " > I'M A <span class="text-brand">SOFTWARE ENGINEERING STUDENT</span> FROM PAKISTAN</h1>
+        <p class="lead mt-2 mb-4">I am Tayal Amber, software engineering student diving into the digital world and exploring binary world of Computer</p>
+        <a href="#work"  class="btn btn-brand me-3">Explore my Work</a>
+        <a href="#"  class="link-custom">Call:xxxx-xxxxxxx</a>
+  </div>
+</div>
+  </div>
+</section>
+<!-- //Home -->
+
+
+<!-- Service -->
+<section id="services" class="full-height" px-lg-5>
+
+<div class="row">
+  <div class="col-log-8">
+    <h6 class="text-brand">My Journey</h6>
+  </div>
+</div>
+
+</section>
+
+
+<!-- //Service -->
+      </div>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/aos.js"></script>
     <script src="./assets/js/main.js"></script>
