--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/line-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar"></body>>
 
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark fixed-top">
@@ -56,10 +56,12 @@
   <div class="container">
 <div class="row">
   <div class="col-log-8">
-        <h1 class="display-4 fw-bold " > I'M A <span class="text-brand">SOFTWARE ENGINEERING STUDENT</span> FROM PAKISTAN</h1>
-        <p class="lead mt-2 mb-4">I am Tayal Amber, software engineering student diving into the digital world and exploring binary world of Computer</p>
-        <a href="#work"  class="btn btn-brand me-3">Explore my Work</a>
-        <a href="#"  class="link-custom">Call:xxxx-xxxxxxx</a>
+        <h1 class="display-4 fw-bold "data-aos="fade-right" > I'M A <span class="text-brand">SOFTWARE ENGINEERING STUDENT</span> FROM PAKISTAN</h1>
+        <p class="lead mt-2 mb-4" data-aos="fade-left" data-aos-delay="300">I am Tayal Amber, software engineering student diving into the digital world and exploring binary world of Computer</p>
+        <div data-aos="fade-up" data-aos-delay="600">
+          <a href="#work"  class="btn btn-brand me-3">Explore my Work</a>
+        <a href="#"  class="link-custom" >Call:xxxx-xxxxxxx</a>
+        </div>
   </div>
 </div>
   </div>
@@ -67,16 +69,7 @@
 <!-- //Home -->
 
 
-<!-- Service -->
-<section id="services" class="full-height" px-lg-5>
 
-<div class="row">
-  <div class="col-log-8">
-    <h6 class="text-brand">My Journey</h6>
-  </div>
-</div>
-
-</section>
 
 
 <!-- //Service -->
