Work Section Completed

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
               
                 <a class="nav-link" href="#home">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#servies">Services</a>
-              </li>
+             
               <li class="nav-item">
                 <a class="nav-link" href="#work">Work</a>
               </li>
@@ -67,12 +65,52 @@
   </div>
 </section>
 <!-- //Home -->
+<!-- Work -->
+
+<section id="work" class="full-height px-lg-5">
+  <div class="container">
+    <div class="row pb-4" data-aos="fade-up">
+      <div class="col-lg-8">
+         <h6 class="text-brand">Work</h6>
+         <h1>My Recent Projects</h1>
+      </div>
+    </div>
+    <div class="row gy-4" style="display: flex; flex-wrap: nowrap; overflow-x: auto;">
+
+      <div class="col-md-4" data-aos="fade-up">
+        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;">
+          <div class="card-custom-image rounded-4">
+            <img class="rounded-4" src="./assets/images/Project1.jpg.jpg" alt="">
+          </div>
+          <div class="card-custom-content p-3">
+            <h5>Restaurant Ordering System</h5>
+            <p>A system built in C that takes your order, place it, and calculates the bill.</p>
+            <a href="#" class="link-custom">Read More</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4" data-aos="fade-up" style="margin-left: 150px;">
+        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;">
+          <div class="card-custom-image rounded-4">
+            <img class="rounded-4" src="./assets/images/Project3.jpg" alt="">
+          </div>
+          <div class="card-custom-content p-3">
+            <h5>Bus Reservation System</h5>
+            <p>
+              A system that book, cancel, bulk book, refund seat and calculate fair according to bags of luggage.</p>
+            <a href="#" class="link-custom">Read More</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
 
-
-
-<!-- //Service -->
+<!-- //Work -->
       </div>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/aos.js"></script>
