About Section Completed

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
               </li>
              
               <li class="nav-item">
-                <a class="nav-link" href="#work">Work</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#work">Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
@@ -65,20 +65,80 @@
   </div>
 </section>
 <!-- //Home -->
+
+<!-- Qualifications -->
+<section id="about" class="full-height px-lg-5">
+  <div class="container">
+    <div class="row pb-4" data-aos="fade-up">
+      <div class="col-lg-8">
+        <h6 class="text-brand">Qualifications</h6>
+        <h1>Education & Experiences</h1>
+      </div>
+    </div>
+
+    <div class="row" gy-5>
+      <div class="col-lg-6">
+        <h3 class="mb-4" data-aos="fade-right" data-aos-delay="400">Education</h3>
+
+        <div class="row gy-4">
+          <div class="col-12" data-aos="fade-right" data-aos-delay="600">
+            <div class="bg-base p-4 rounded-4 shadow-effect" style="background-color: #033f47; margin-bottom: 20px;">
+              <h4>Bachelor's of Software Engineering</h4>
+              <p class="text-brand mb-2">University of Sahiwal (2023-Present)</p>
+              <p class="mb-0">Current CGPA: 3.97/4.00</p>
+            </div>
+          </div>
+          <div class="col-12" data-aos="fade-right" data-aos-delay="600">
+            <div class="bg-base p-4 rounded-4 shadow-effect" style="background-color: #033f47; margin-bottom: 20px;">
+              <h4>Fsc. Pre Engineering</h4>
+              <p class="text-brand mb-2">Aspire College, Sahiwal (2021-2023)</p>
+              <p class="mb-0">Grade: A+</p>
+            </div>
+          </div>
+          <div class="col-12" data-aos="fade-right" data-aos-delay="400">
+            <div class="bg-base p-4 rounded-4 shadow-effect" style="background-color: #033f47; margin-bottom: 20px;">
+              <h4>Matriculation</h4>
+              <p class="text-brand mb-2">Pilot High School, Sahiwal (2019-2021)</p>
+              <p class="mb-0">Grade: A+</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <h3 class="mb-4" data-aos="fade-right" data-aos-delay="400">Experience</h3>
+
+        <div class="row gy-4">
+          <div class="col-12" data-aos="fade-left" data-aos-delay="600">
+            <div class="bg-base p-4 rounded-4 shadow-effect" style="background-color: #033f47; margin-bottom: 20px;">
+              <h4>C++ Developer Intern</h4>
+              <p class="text-brand mb-2">CODSOFT (March, 2024-Present)</p>
+              <p class="mb-0">India. Remote</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- //Qualifications -->
+
 <!-- Work -->
 
 <section id="work" class="full-height px-lg-5">
-  <div class="container">
+  <div class="container" data-aos="fade-up" data-aos-delay="400">
     <div class="row pb-4" data-aos="fade-up">
       <div class="col-lg-8">
          <h6 class="text-brand">Work</h6>
          <h1>My Recent Projects</h1>
       </div>
     </div>
-    <div class="row gy-4" style="display: flex; flex-wrap: nowrap; overflow-x: auto;">
+    <div class="row gy-4" style="display: flex; flex-wrap: nowrap; overflow-x: auto; ">
 
       <div class="col-md-4" data-aos="fade-up">
-        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;">
+        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;  background-color: #033f47;">
           <div class="card-custom-image rounded-4">
             <img class="rounded-4" src="./assets/images/Project1.jpg.jpg" alt="">
           </div>
@@ -90,8 +150,8 @@
         </div>
       </div>
 
-      <div class="col-md-4" data-aos="fade-up" style="margin-left: 150px;">
-        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;">
+      <div class="col-md-4" data-aos="fade-up" style="margin-left: 200px;">
+        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;  background-color: #033f47;">
           <div class="card-custom-image rounded-4">
             <img class="rounded-4" src="./assets/images/Project3.jpg" alt="">
           </div>
@@ -108,9 +168,8 @@
   </div>
 </section>
 
-
-
 <!-- //Work -->
+
       </div>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/aos.js"></script>
