Browser Tab Icon Added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="./assets/images/Person.jpg.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tayal's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
