--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 </section>
 
 <!-- //Work -->
-<!-- Contact -->
+<!-- ContactMe -->
 <section id="contact" class="full-height px-lg-5">
   <div class="container">
 
@@ -204,7 +204,7 @@
 </div>
 </section>
 
-<!-- //Contact -->
+<!-- //Contact Me-->
 
       </div>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
