--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark fixed-top">
+
         <div class="container flex-lg-column">
           <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
             <span class="h3 fw-bold d-block d-lg-none">Tayal Amber</span>
@@ -58,12 +59,20 @@
         <h1 class="display-4 fw-bold "data-aos="fade-right" > I'M A <span class="text-brand">SOFTWARE ENGINEERING STUDENT</span> FROM PAKISTAN</h1>
         <p class="lead mt-2 mb-4" data-aos="fade-left" data-aos-delay="300">I am Tayal Amber, software engineering student diving into the digital world and exploring binary world of Computer</p>
         <div data-aos="fade-up" data-aos-delay="600">
-          <a href="#work"  class="btn btn-brand me-3">Explore my Work</a>
-        <a href="#"  class="link-custom" >Call:xxxx-xxxxxxx</a>
+          <a href="./assets/Tayal's Resume-portfolio.pdf" download class="btn btn-brand me-3">Download CV</a>
+
+        <a href="#contact"  class="link-custom" class="font-weight=40px" >Contact Me</a>
         </div>
   </div>
 </div>
   </div>
+        <!-- Social Icons -->
+        <div class="social-icons">
+          <a href="https://github.com/Tayl-Amber/" target="_blank"><i class="lab la-github"></i></a>
+          <a href="https://www.linkedin.com/in/taylamber" target="_blank"><i class="lab la-linkedin"></i></a>
+          <a href="https://stackoverflow.com/users/23075122/tayal-amber" target="_blank"><i class="lab la-stack-overflow"></i></a>
+      </div>
+       <!--Social Icons-->
 </section>
 <!-- //Home -->
 
@@ -129,24 +138,24 @@
 <!-- Work -->
 
 <section id="work" class="full-height px-lg-5">
-  <div class="container" data-aos="fade-up" data-aos-delay="400">
+  <div class="container" data-aos="fade-up" data-aos-delay="400" style="overflow-x: hidden;">
     <div class="row pb-4" data-aos="fade-up">
       <div class="col-lg-8">
-         <h6 class="text-brand">Work</h6>
-         <h1>My Recent Projects</h1>
+        <h6 class="text-brand">Work</h6>
+        <h1>My Recent Projects</h1>
       </div>
     </div>
-    <div class="row gy-4" style="display: flex; flex-wrap: nowrap; overflow-x: auto; ">
+    <div class="row gy-4" style="display: flex; flex-wrap: wrap; justify-content: center;">
 
       <div class="col-md-4" data-aos="fade-up">
-        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;  background-color: #033f47;">
+        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem; background-color: #033f47;">
           <div class="card-custom-image rounded-4">
             <img class="rounded-4" src="./assets/images/Project1.jpg.jpg" alt="">
           </div>
           <div class="card-custom-content p-3">
             <h5>Restaurant Ordering System</h5>
             <p>A system built in C that takes your order, place it, and calculates the bill.</p>
-            <a href="#" class="link-custom">Read More</a>
+            <a href="https://github.com/Tayl-Amber/Restaurant-system" target="_blank"="link-custom">Read More</a>
           </div>
         </div>
       </div>
@@ -159,8 +168,8 @@
           <div class="card-custom-content p-3">
             <h5>Bus Reservation System</h5>
             <p>
-              A system that book, cancel, bulk book, refund seat and calculate fair according to bags of luggage.</p>
-            <a href="#" class="link-custom">Read More</a>
+              A system that book, cancel, bulk book, refund seat and calculate fair as per bag.</p>
+            <a href="https://github.com/Tayl-Amber/Bus_Reservation_System" target="_blank"="link-custom">Read More</a>
           </div>
         </div>
       </div>
@@ -177,23 +186,22 @@
       <div class="row justify-content-center text-center">
           <div class="col-lg-8 pb-4" data-aos="fade-up">
               <h6 class="text-brand">CONTACT</h6>
-              <h1>Interested in working together? Let's talk
-              </h1>
+              <h1>Interested in working together? Let's talk</h1>
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="300">
-              <form action="#" class="row g-lg-3 gy-3">
+              <form id="contactForm" class="row g-lg-3 gy-3">
                   <div class="form-group col-md-6">
-                      <input type="text" class="form-control" placeholder="Enter your name">
+                      <input id="nameInput" type="text" class="form-control" placeholder="Enter your name">
                   </div>
                   <div class="form-group col-md-6">
-                      <input type="email" class="form-control" placeholder="Enter your email">
+                      <input id="emailInput" type="email" class="form-control" placeholder="Enter your email">
                   </div>
                   <div class="form-group col-12">
-                      <input type="text" class="form-control" placeholder="Enter subject">
+                      <input id="subjectInput" type="text" class="form-control" placeholder="Enter subject">
                   </div>
                   <div class="form-group col-12">
-                      <textarea name="" rows="4" class="form-control" placeholder="Enter your message"></textarea>
+                      <textarea id="messageInput" rows="4" class="form-control" placeholder="Enter your message"></textarea>
                   </div>
                   <div class="form-group col-12 d-grid">
                       <button type="submit" class="btn btn-brand">Contact me</button>
@@ -203,8 +211,7 @@
       </div>
 </div>
 </section>
-
-<!-- //Contact Me-->
+<!-- //Contact Me -->
 
       </div>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
