--- a/index.html
+++ b/index.html
@@ -61,17 +61,29 @@
         <div data-aos="fade-up" data-aos-delay="600">
           <a href="./assets/Tayal's Resume-portfolio.pdf" download class="btn btn-brand me-3">Download CV</a>
 
-        <a href="#contact"  class="link-custom" class="font-weight=40px" >Contact Me</a>
+          <a href="#contact" class="link-custom fs-6 fs-md-5 fs-lg-4">Contact Me</a>
+
         </div>
   </div>
 </div>
   </div>
         <!-- Social Icons -->
-        <div class="social-icons">
-          <a href="https://github.com/Tayl-Amber/" target="_blank"><i class="lab la-github"></i></a>
-          <a href="https://www.linkedin.com/in/taylamber" target="_blank"><i class="lab la-linkedin"></i></a>
-          <a href="https://stackoverflow.com/users/23075122/tayal-amber" target="_blank"><i class="lab la-stack-overflow"></i></a>
-      </div>
+       <!-- Social Icons -->
+<!-- Social Icons -->
+<div class="d-flex justify-content-center social-icons">
+  <a href="https://github.com/Tayl-Amber/" target="_blank" class="social-icon">
+    <i class="lab la-github display-6 display-md-5 display-lg-4"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/taylamber" target="_blank" class="social-icon">
+    <i class="lab la-linkedin display-6 display-md-5 display-lg-4"></i>
+  </a>
+  <a href="https://stackoverflow.com/users/23075122/tayal-amber" target="_blank" class="social-icon">
+    <i class="lab la-stack-overflow display-6 display-md-5 display-lg-4"></i>
+  </a
+
+<!--Social Icons-->
+
+            
        <!--Social Icons-->
 </section>
 <!-- //Home -->
@@ -122,7 +134,7 @@
           <div class="col-12" data-aos="fade-left" data-aos-delay="600">
             <div class="bg-base p-4 rounded-4 shadow-effect" style="background-color: #033f47; margin-bottom: 20px;">
               <h4>C++ Developer Intern</h4>
-              <p class="text-brand mb-2">CODSOFT (March, 2024-Present)</p>
+              <p class="text-brand mb-2">CODSOFT (March, 2024-April, 2024)</p>
               <p class="mb-0">India. Remote</p>
             </div>
           </div>
@@ -145,35 +157,32 @@
         <h1>My Recent Projects</h1>
       </div>
     </div>
-    <div class="row gy-4" style="display: flex; flex-wrap: wrap; justify-content: center;">
-
-      <div class="col-md-4" data-aos="fade-up">
-        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem; background-color: #033f47;">
+    <div class="container row gy-4 justify-content-center">
+      <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up"> <!-- Added mb-4 class here -->
+        <div class="card-custom rounded-4 bg-base shadow-effect" style="background-color: #033f47;">
           <div class="card-custom-image rounded-4">
-            <img class="rounded-4" src="./assets/images/Project1.jpg.jpg" alt="">
+            <img class="rounded-4 img-fluid" src="./assets/images/Project1.jpg.jpg" alt="">
           </div>
           <div class="card-custom-content p-3">
             <h5>Restaurant Ordering System</h5>
-            <p>A system built in C that takes your order, place it, and calculates the bill.</p>
-            <a href="https://github.com/Tayl-Amber/Restaurant-system" target="_blank"="link-custom">Read More</a>
+            <p>A system that takes your order, place it, and calculates the bill.</p>
+            <a href="https://github.com/Tayl-Amber/Restaurant-system" target="_blank" class="link-custom">Read More</a>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4" data-aos="fade-up" style="margin-left: 200px;">
-        <div class="card-custom rounded-4 bg-base shadow-effect" style="width: 22rem;  background-color: #033f47;">
+      <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up"> <!-- Added mb-4 class here -->
+        <div class="card-custom rounded-4 bg-base shadow-effect" style="background-color: #033f47;">
           <div class="card-custom-image rounded-4">
-            <img class="rounded-4" src="./assets/images/Project3.jpg" alt="">
+            <img class="rounded-4 img-fluid" src="./assets/images/Project3.jpg" alt="">
           </div>
           <div class="card-custom-content p-3">
             <h5>Bus Reservation System</h5>
-            <p>
-              A system that book, cancel, bulk book, refund seat and calculate fair as per bag.</p>
-            <a href="https://github.com/Tayl-Amber/Bus_Reservation_System" target="_blank"="link-custom">Read More</a>
+            <p>System that book, cancel, bulk book, refund seat and calculate fair per bag.</p>
+            <a href="https://github.com/Tayl-Amber/Bus_Reservation_System" target="_blank" class="link-custom">Read More</a>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </section>
