Kaggle icon Added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
   </a>
   <a href="https://stackoverflow.com/users/23075122/tayal-amber" target="_blank" class="social-icon">
     <i class="lab la-stack-overflow display-6 display-md-5 display-lg-4"></i>
-  </a
+  </a>
+  <a href="https://www.kaggle.com/tayalamber" target="_blank" class="social-icon">
+    <i class="lab la-kaggle display-6 display-md-5 display-lg-4"></i>
+   </a>
 
 <!--Social Icons-->
 
