--- a/index.html
+++ b/index.html
@@ -205,20 +205,28 @@
               <form id="contactForm" class="row g-lg-3 gy-3">
                   <div class="form-group col-md-6">
                       <input id="nameInput" type="text" class="form-control" placeholder="Enter your name">
+                      <div class="error-text">Name can't be blank</div>
                   </div>
                   <div class="form-group col-md-6">
                       <input id="emailInput" type="email" class="form-control" placeholder="Enter your email">
-                  </div>
+                      <div class="error-text">Email can't be blank</div>
+                    </div>
                   <div class="form-group col-12">
                       <input id="subjectInput" type="text" class="form-control" placeholder="Enter subject">
-                  </div>
+                      <div class="error-text">Subject can't be blank</div>
+                    </div>
                   <div class="form-group col-12">
                       <textarea id="messageInput" rows="4" class="form-control" placeholder="Enter your message"></textarea>
                   </div>
                   <div class="form-group col-12 d-grid">
-                      <button type="submit" class="btn btn-brand">Contact me</button>
+                    <a href="mailto:taylamber352@gmail.com" class="btn btn-brand">Contact me via Email</a>
+                  <div class="error-text">Message can't be blank</div>
                   </div>
               </form>
+              <div class="mt-3">
+                <!-- Use a mailto link as an alternative way to contact -->
+               
+            </div>
           </div>
       </div>
 </div>
@@ -226,6 +234,7 @@
 <!-- //Contact Me -->
 
       </div>
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/aos.js"></script>
     <script src="./assets/js/main.js"></script>
