--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                       <textarea id="messageInput" rows="4" class="form-control" placeholder="Enter your message"></textarea>
                   </div>
                   <div class="form-group col-12 d-grid">
-                    <a href="mailto:taylamber352@gmail.com" class="btn btn-brand">Contact me via Email</a>
+                    <button type="submit" class="btn btn-brand">Contact me via Email</button>
                   <div class="error-text">Message can't be blank</div>
                   </div>
               </form>
@@ -234,10 +234,11 @@
 <!-- //Contact Me -->
 
       </div>
-      <script src="https://smtpjs.com/v3/smtp.js"></script>
+  
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/aos.js"></script>
     <script src="./assets/js/main.js"></script>
+  
 
 </body>
 </html>
