Contact Me mail changes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         <div class="container flex-lg-column">
           <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
             <span class="h3 fw-bold d-block d-lg-none">Tayal Amber</span>
-           <img src="./assets/images/Person.jpg.jpeg" class="d-none d-lg-block rounded-circle" alt="">  
-        </a>
+            <div class="profile-pic-container">
+              <img src="./assets/images/Person.jpg.jpeg" class="d-none d-lg-block rounded-circle profile-pic" alt="">
+            </div>
+          </a>
+          
+          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -243,9 +247,9 @@
 <script type="text/javascript">
    (function(){
       emailjs.init({
-        publicKey: "N7GVF5iC3veJeDuFT",
+        publicKey: "kIAbglr1wxGn92HNF",
       });
-   })();
+   })();    
 </script>
   </body>
   </html>
