HackerRank Icon Added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h1 class="display-4 fw-bold "data-aos="fade-right" > I'M A <span class="text-brand">SOFTWARE ENGINEERING STUDENT</span> FROM PAKISTAN</h1>
         <p class="lead mt-2 mb-4" data-aos="fade-left" data-aos-delay="300">I am Tayal Amber, software engineering student diving into the digital world and exploring binary world of Computer</p>
         <div data-aos="fade-up" data-aos-delay="600">
-          <a href="./assets/Tayal's Resume-portfolio.pdf" download class="btn btn-brand me-3">Download CV</a>
+          <a href="./assets/My_Resume.pdf" download class="btn btn-brand me-3">Download CV</a>
 
           <a href="#contact" class="link-custom fs-6 fs-md-5 fs-lg-4">Contact Me</a>
 
@@ -87,7 +87,10 @@
   <a href="https://www.kaggle.com/tayalamber" target="_blank" class="social-icon">
     <i class="lab la-kaggle display-6 display-md-5 display-lg-4"></i>
    </a>
-
+   <a href="https://www.hackerrank.com/profile/taylamber352" target="_blank" class="social-icon">
+    <i class="lab la-hackerrank display-6 display-md-5 display-lg-4"></i>
+  </a>
+</div>
 <!--Social Icons-->
 
             
