--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
    <a href="https://www.hackerrank.com/profile/taylamber352" target="_blank" class="social-icon">
     <i class="lab la-hackerrank display-6 display-md-5 display-lg-4"></i>
   </a>
+   <a href="https://discordapp.com/users/1182983931625222156" target="_blank" class="social-icon">
+    <i class="lab la-discord display-6 display-md-5 display-lg-4"></i>
+  </a>
 </div>
 <!--Social Icons-->
 
