--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <a href="https://www.kaggle.com/tayalamber" target="_blank" class="social-icon">
     <i class="lab la-kaggle display-6 display-md-5 display-lg-4"></i>
    </a>
-   <a href="https://www.hackerrank.com/profile/taylamber352" target="_blank" class="social-icon">
+   <a href="https://www.hackerrank.com/profile/tayalamber" target="_blank" class="social-icon">
     <i class="lab la-hackerrank display-6 display-md-5 display-lg-4"></i>
   </a>
    <a href="https://discordapp.com/users/1182983931625222156" target="_blank" class="social-icon">
