--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
    <a href="https://www.hackerrank.com/profile/tayalamber" target="_blank" class="social-icon">
     <i class="lab la-hackerrank display-6 display-md-5 display-lg-4"></i>
   </a>
-   <a href="https://discordapp.com/users/1182983931625222156" target="_blank" class="social-icon">
-    <i class="lab la-discord display-6 display-md-5 display-lg-4"></i>
-  </a>
+  
 </div>
 <!--Social Icons-->
 
@@ -149,6 +147,15 @@
               <h4>C++ Developer Intern</h4>
               <p class="text-brand mb-2">CODSOFT (March, 2024-April, 2024)</p>
               <p class="mb-0">India. Remote</p>
+            </div>
+          </div>
+        </div>
+        <div class="row gy-4">
+          <div class="col-12" data-aos="fade-left" data-aos-delay="600">
+            <div class="bg-base p-4 rounded-4 shadow-effect" style="background-color: #033f47; margin-bottom: 20px;">
+              <h4>Frontend Development Fellow</h4>
+              <p class="text-brand mb-2">Bytewise Limited (June, 2024 - Present)</p>
+              <p class="mb-0">Remote</p>
             </div>
           </div>
         </div>
